Refactor service and integrate Kafka