@@ -6,17 +6,18 @@ import com.laundry.order.dto.response.OrderItemResponse;
 import com.laundry.order.dto.response.OrderResponse;
 import com.laundry.order.entity.Order;
 import com.laundry.order.entity.OrderItem;
-import com.laundry.order.entity.Product;
 import com.laundry.order.entity.User;
 import com.laundry.order.enums.OrderStatus;
+import com.laundry.order.event.InventoryEvent;
+import com.laundry.order.event.PaymentEvent;
 import com.laundry.order.exception.CustomException;
 import com.laundry.order.exception.ErrorCode;
+import com.laundry.order.kafka.producer.OrderKafkaProducer;
 import com.laundry.order.mapstruct.OrderMapper;
 import com.laundry.order.repository.OrderItemRepository;
 import com.laundry.order.repository.OrderRepository;
-import com.laundry.order.repository.ProductRepository;
 import com.laundry.order.repository.UserRepository;
-import com.laundry.order.service.InventoryService;
+
 import com.laundry.order.service.OrderService;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -28,8 +29,6 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,10 +37,14 @@ public class OrderServiceImpl implements OrderService {
 
   private final OrderRepository orderRepository;
   private final UserRepository userRepository;
-  private final ProductRepository productRepository;
-  private final InventoryService inventoryService;
   private final OrderMapper mapper;
   private final OrderItemRepository orderItemRepository;
+  private final OrderKafkaProducer orderKafkaProducer;
+
+//  @Override
+//  public List<ProductResponse>getProductById(List<UUID> productIds) {
+//    return productClient.getProductById(productIds);
+//  }
 
   @Override
   @Transactional
@@ -51,69 +54,60 @@ public class OrderServiceImpl implements OrderService {
     backoff = @Backoff(delay = 200, multiplier = 2)
   )
   public OrderResponse createOrder(OrderCreateRequest orderCreateRequest, String idempotentKey) {
-    Optional<Order> existingOrder = orderRepository.findByIdempotentKey(UUID.fromString(idempotentKey));
-    if (existingOrder.isPresent()) {
-      log.info("[ORDER SERVICE] - Order already exists: [IdempotentKey = {}], return existing Order!", idempotentKey);
-      return buildOrderResponse(existingOrder.get(), existingOrder.get().getUser(), existingOrder.get().getItems());
-    }
+
     User user = findUserById(orderCreateRequest.getUserId());
-    Map<UUID, Product> productMap = getProductMap(orderCreateRequest);
-    Map<UUID, Integer> productQuantities = extractProductQuantities(orderCreateRequest);
-
-    inventoryService.reduceStock(productQuantities);
-
-    Order order = buildOrder(orderCreateRequest, user);
-    List<OrderItem> orderItems = buildOrderItems(orderCreateRequest, order, productMap);
-
-    order.setItems(orderItems);
+    Order order = buildOrder(orderCreateRequest, user.getId());
     order.setIdempotentKey(UUID.fromString(idempotentKey));
     log.info("[ORDER CREATE] -- Saving order to database");
     orderRepository.save(order);
+    List<OrderItem> orderItems = buildOrderItems(orderCreateRequest, order.getId());
     orderItemRepository.saveAll(orderItems);
     log.info("[ORDER CREATE] -- Order successfully created with orderId = {}", order.getId());
-    return buildOrderResponse(order, user, orderItems);
+    OrderResponse orderResponse = buildOrderResponse(order, user, orderItems);
+    publishOrderEvents(orderResponse);
+    return orderResponse;
   }
-
   private User findUserById(UUID userId) {
     return userRepository.findById(userId)
       .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND, "User not found", userId));
   }
 
-  private Map<UUID, Product> getProductMap(OrderCreateRequest orderCreateRequest) {
-    List<UUID> productIds = orderCreateRequest.getItems().stream()
-      .map(OrderItemCreateRequest::getProductId)
-      .collect(Collectors.toList());
-    List<Product> products = productRepository.findAllById(productIds);
-    log.debug("[ORDER SERVICE] -- Retrieved {} products", products.size());
-    return products.stream().collect(Collectors.toMap(Product::getId, Function.identity()));
+  private void publishOrderEvents(OrderResponse orderResponse) {
+    InventoryEvent inventoryEvent = new InventoryEvent(orderResponse.getId(),
+      orderResponse.getItems().stream()
+        .map(item -> new InventoryEvent.ProductQuantity(item.getProductId(), item.getQuantity()))
+        .toList()
+    );
+    orderKafkaProducer.sendInventoryEvent(inventoryEvent);
+    log.info("[ORDER EVENT] -- Sent InventoryEvent: {}", inventoryEvent);
+
+    PaymentEvent paymentEvent = PaymentEvent.builder()
+      .orderId(orderResponse.getId())
+      .totalAmount(orderResponse.getTotalAmount())
+      .paymentMethod(orderResponse.getPaymentMethod().toString())
+      .build();
+    orderKafkaProducer.sendPaymentEvent(paymentEvent);
+    log.info("[ORDER EVENT] -- Sent PaymentEvent: {}", paymentEvent);
   }
 
-  private Map<UUID, Integer> extractProductQuantities(OrderCreateRequest orderCreateRequest) {
-    return orderCreateRequest.getItems().stream()
-      .collect(Collectors.toMap(OrderItemCreateRequest::getProductId, OrderItemCreateRequest::getQuantity));
-  }
-
-
-  private Order buildOrder(OrderCreateRequest request, User user) {
+  private Order buildOrder(OrderCreateRequest request, UUID userId) {
     Order order = mapper.toEntity(request);
-    order.setUser(user);
+    order.setUserId(userId);
     order.setStatus(OrderStatus.PENDING);
     return order;
   }
 
-  private List<OrderItem> buildOrderItems(OrderCreateRequest orderCreateRequest, Order order, Map<UUID, Product> productMap) {
+  private List<OrderItem> buildOrderItems(OrderCreateRequest orderCreateRequest, Long orderId) {
     List<OrderItem> orderItems = new ArrayList<>();
 
     for (OrderItemCreateRequest itemRequest : orderCreateRequest.getItems()) {
-      Product product = productMap.get(itemRequest.getProductId());
 
       OrderItem orderItem = OrderItem.builder()
-        .order(order)
-        .product(product)
+        .orderId(orderId)
+        .productId(itemRequest.getProductId())
         .quantity(itemRequest.getQuantity())
         .price(itemRequest.getPrice())
         .build();
-
       orderItems.add(orderItem);
     }
     return orderItems;
@@ -136,17 +130,17 @@ public class OrderServiceImpl implements OrderService {
       .userId(user.getId())
       .createdDate(order.getCreatedDate())
       .idempotentKey(order.getIdempotentKey())
-      .items(mapToOrderItemResponse(order, orderItems))
+      .items(mapToOrderItemResponse( orderItems))
       .totalAmount(calculateTotalAmount(orderItems))
       .status(order.getStatus())
       .build();
   }
 
-  private List<OrderItemResponse> mapToOrderItemResponse(Order order, List<OrderItem> items) {
-    return order.getItems().stream()
+  private List<OrderItemResponse> mapToOrderItemResponse( List<OrderItem> items) {
+    return items.stream()
       .map(item -> {
         return OrderItemResponse.builder()
-          .productName(item.getProduct().getName())
+          .productId(item.getProductId())
           .quantity(item.getQuantity())
           .price(item.getPrice())
           .build();
